; ModuleID = '/home/carl/AnghaBench/git/extr_environment.c_strip_namespace.c'
source_filename = "/home/carl/AnghaBench/git/extr_environment.c_strip_namespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @strip_namespace(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 (...) @get_git_namespace()
  %7 = call i64 @skip_prefix(i8* %5, i32 %6, i8** %4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i8*, i8** %4, align 8
  store i8* %10, i8** %2, align 8
  br label %12

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %12

12:                                               ; preds = %11, %9
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i64 @skip_prefix(i8*, i32, i8**) #1

declare dso_local i32 @get_git_namespace(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
